crates/edgezero-macros/tests/ui/non_secret_with_serde_skip_serializing_if.stderr
error: `#[serde(skip_serializing_if)]` is not allowed on fields of an `AppConfig`-derived struct (it would desync the canonical-form rules in 4.2 from the serde JSON shape). If you need a flat layout, define it explicitly.
 --> tests/ui/non_secret_with_serde_skip_serializing_if.rs:9:5
  |
9 |     #[serde(skip_serializing_if = "Option::is_none")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
